<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_settings_page"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentInsetLeft="@dimen/margin_30dp"
            app:contentInsetStart="@dimen/margin_30dp"
            app:title="@string/title_settings_page">

            <ImageView
                android:id="@+id/image_battery_level_settings"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_30dp"
                android:layout_gravity="end"
                android:contentDescription="@string/label_battery_level"
                android:src="@drawable/level_list_battery_levels" />
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_auto_connect"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_30dp"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:layout_marginEnd="@dimen/margin_30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_settings_page">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_auto_connect"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_15dp"
            android:gravity="center_vertical"
            android:text="@string/switch_auto_connect"
            android:textSize="@dimen/text_size_15sp"
            app:layout_constraintStart_toEndOf="@id/switch_auto_connect" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_smooth"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_30dp"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_15dp"
        android:layout_marginEnd="@dimen/margin_30dp"
        app:layout_constraintTop_toBottomOf="@id/layout_auto_connect">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_smooth"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_15dp"
            android:gravity="center_vertical"
            android:text="@string/switch_smooth"
            android:textSize="@dimen/text_size_15sp"
            app:layout_constraintStart_toEndOf="@id/switch_smooth" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_analyze"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_30dp"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_15dp"
        android:layout_marginEnd="@dimen/margin_30dp"
        app:layout_constraintTop_toBottomOf="@id/layout_smooth">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_analyze"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_15dp"
            android:gravity="center_vertical"
            android:text="@string/switch_analyze"
            android:textSize="@dimen/text_size_15sp"
            app:layout_constraintStart_toEndOf="@id/switch_analyze" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_open_after"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_30dp"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_15dp"
        android:layout_marginEnd="@dimen/margin_30dp"
        app:layout_constraintTop_toBottomOf="@id/layout_analyze">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_open_after"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_15dp"
            android:gravity="center_vertical"
            android:text="@string/switch_open_after"
            android:textSize="@dimen/text_size_15sp"
            app:layout_constraintStart_toEndOf="@id/switch_open_after" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_selected_wavelength"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_30dp"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_15dp"
        android:layout_marginEnd="@dimen/margin_30dp"
        app:layout_constraintTop_toBottomOf="@id/layout_open_after">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_selected_wavelength"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_15dp"
            android:gravity="center_vertical"
            android:text="@string/switch_selected_wavelength"
            android:textSize="@dimen/text_size_15sp"
            app:layout_constraintStart_toEndOf="@id/switch_selected_wavelength" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_language"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_30dp"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_15dp"
        android:layout_marginEnd="@dimen/margin_30dp"
        app:layout_constraintTop_toBottomOf="@id/layout_selected_wavelength">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_language"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_15dp"
            android:gravity="center_vertical"
            android:text="@string/switch_language"
            android:textSize="@dimen/text_size_15sp"
            app:layout_constraintStart_toEndOf="@id/switch_language" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>